--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -80,7 +80,7 @@ llvm.sysroot(
     name = "llvm_toolchain_x86_with_sysroot",
     label = "@org_chromium_sysroot_linux_x64//:sysroot",
     targets = [
-        "linux_x86_64_musl",
+        "linux-x86_64",
     ],
 )
 use_repo(llvm, "llvm_toolchain_x86_with_sysroot")
@@ -94,7 +94,7 @@ llvm.sysroot(
     name = "llvm_toolchain_aarch64_with_sysroot",
     label = "@org_chromium_sysroot_linux_aarch64//:sysroot",
     targets = [
-        "linux_arm64_musl",
+        "linux-aarch64",
     ],
 )
 use_repo(llvm, "llvm_toolchain_aarch64_with_sysroot")
