--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -16,6 +16,9 @@ bazel_dep(name = "platforms", version = "0.0.10")
 # https://github.com/bazel-contrib/toolchains_llvm
 bazel_dep(name = "toolchains_llvm", version = "1.2.0")
 
+# https://github.com/bazelbuild/bazel/blob/master/tools/build_defs/repo/http.bzl
+http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
+
 ###############################################################################
 # LLVM toolchain #
 ###############################################################################
@@ -26,6 +29,37 @@ LLVM_VERSIONS = {
     "": "19.1.0",  # Linux X86
     "darwin-aarch64": "19.1.0",  # Apple Silicon Macs
 }
+
+# Sysroot for LLVM
+# Both, cross compilation and MUSL still need a C/C++ toolchain with sysroot.
+# https://github.com/bazel-contrib/toolchains_llvm/tree/0d302de75f6ace071ac616fb274481eedcc20e5a?tab=readme-ov-file#sysroots
+_BUILD_FILE_CONTENT = """
+filegroup(
+  name = "{name}",
+  srcs = glob(["*/**"]),
+  visibility = ["//visibility:public"],
+)
+"""
+
+# INTEL/AMD64 Sysroot
+# LastModified: 2024-04-26T19:15
+# https://commondatastorage.googleapis.com/chrome-linux-sysroot/
+http_archive(
+    name = "org_chromium_sysroot_linux_x64",
+    build_file_content = _BUILD_FILE_CONTENT.format(name = "sysroot"),
+    sha256 = "5df5be9357b425cdd70d92d4697d07e7d55d7a923f037c22dc80a78e85842d2c",
+    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/4f611ec025be98214164d4bf9fbe8843f58533f7/debian_bullseye_amd64_sysroot.tar.xz"],
+)
+
+# ARM 64 Sysroot
+# LastModified: 2024-04-26T18:33
+# https://commondatastorage.googleapis.com/chrome-linux-sysroot/
+http_archive(
+    name = "org_chromium_sysroot_linux_aarch64",
+    build_file_content = _BUILD_FILE_CONTENT.format(name = "sysroot"),
+    sha256 = "d303cf3faf7804c9dd24c9b6b167d0345d41d7fe4bfb7d34add3ab342f6a236c",
+    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/906cc7c6bf47d4bd969a3221fc0602c6b3153caa/debian_bullseye_arm64_sysroot.tar.xz"],
+)
 
 # LLVM SETUP
 llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
@@ -44,7 +78,7 @@ llvm.toolchain(
 )
 llvm.sysroot(
     name = "llvm_toolchain_x86_with_sysroot",
-    label = "@@org_chromium_sysroot_linux_x64//:sysroot",
+    label = "@org_chromium_sysroot_linux_x64//:sysroot",
     targets = [
         "linux-x86_64",
     ],
@@ -58,7 +92,7 @@ llvm.toolchain(
 )
 llvm.sysroot(
     name = "llvm_toolchain_aarch64_with_sysroot",
-    label = "@@org_chromium_sysroot_linux_aarch64//:sysroot",
+    label = "@org_chromium_sysroot_linux_aarch64//:sysroot",
     targets = [
         "linux-aarch64",
     ],
