--- a/.bazelrc
+++ b/.bazelrc
@@ -5,10 +5,6 @@
 ## https://bazel.build/docs/best-practices#bazelrc-file
 ###############################################################################
 
-# Required on windows
-# https://bazel.build/reference/command-line-reference#flag--enable_platform_specific_config
-common --enable_platform_specific_config
-
 ###############################################################################
 ## Build configuration
 ###############################################################################
@@ -61,25 +57,32 @@ common --noslim_profile
 common --experimental_profile_include_target_label
 common --experimental_profile_include_primary_output
 
+# Required for cargo_build_script support before Bazel 7
+common --incompatible_merge_fixed_and_default_shell_env
+
 ###############################################################################
 ## Cross compilation configuration
 ###############################################################################
 
 # Debug toolchain resolution
-# build --toolchain_resolution_debug='@bazel_tools//tools/cpp:toolchain_type
+build --toolchain_resolution_debug='@bazel_tools//tools/cpp:toolchain_type
+
+# Required to support cross compilation from different host systems i.e Mac and Linux
+# https://bazel.build/reference/command-line-reference#flag--enable_platform_specific_config
+common --enable_platform_specific_config
 
 # Required to resolve C/C++ toolchain.
 # https://github.com/bazel-contrib/musl-toolchain?tab=readme-ov-file#setup
 build --incompatible_enable_cc_toolchain_resolution
 
-# Required for cargo_build_script support before Bazel 7
-build --incompatible_merge_fixed_and_default_shell_env
+# Build targets for different hosts
+build:macos --extra_execution_platforms=//build/platforms:darwin-aarch64
+build:linux --extra_execution_platforms=//build/platforms:linux-x86_64
 
 # Enable cross compilation for extra platforms.
 # See //build/platforms/BUILD.bazel for definitions.
 build --extra_execution_platforms=//build/platforms:linux-x86_64
 build --extra_execution_platforms=//build/platforms:linux-aarch64
-# build --extra_execution_platforms=//build/platforms:darwin-aarch64
 
 # Add extra toolchains for cross compilation
 # See MODULE.bazel for details.
