--- a/.bazelrc
+++ b/.bazelrc
@@ -65,7 +65,7 @@ common --incompatible_merge_fixed_and_default_shell_env
 ###############################################################################
 
 # Debug toolchain resolution
-build --toolchain_resolution_debug='@bazel_tools//tools/cpp:toolchain_type
+# build --toolchain_resolution_debug='@bazel_tools//tools/cpp:toolchain_type
 
 # Required to support cross compilation from different host systems i.e Mac and Linux
 # https://bazel.build/reference/command-line-reference#flag--enable_platform_specific_config
@@ -78,16 +78,6 @@ build --incompatible_enable_cc_toolchain_resolution
 # Build targets for different hosts
 build:macos --extra_execution_platforms=//build/platforms:darwin-aarch64
 build:linux --extra_execution_platforms=//build/platforms:linux-x86_64
-
-# Enable cross compilation for extra platforms.
-# See //build/platforms/BUILD.bazel for definitions.
-build --extra_execution_platforms=//build/platforms:linux-x86_64
-build --extra_execution_platforms=//build/platforms:linux-aarch64
-
-# Add extra toolchains for cross compilation
-# See MODULE.bazel for details.
-build --extra_toolchains=@llvm_toolchain_x86_with_sysroot//:cc-toolchain-x86_64-linux
-build --extra_toolchains=@llvm_toolchain_aarch64_with_sysroot//:cc-toolchain-aarch64-linux
 
 ###############################################################################
 ## Custom user flags
