--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -8,6 +8,9 @@ module(
 ###############################################################################
 
 # https://github.com/bazelbuild/rules_rust/releases
+# Note, cross compilation with rules_rust 0.52 is currently (Oct/2024) broken on MacOS.
+# See the issue 2917 for details.
+# https://github.com/bazelbuild/rules_rust/issues/2917
 bazel_dep(name = "rules_rust", version = "0.51.0")
 
 # https://github.com/bazelbuild/platforms/releases
@@ -23,74 +26,48 @@ http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "ht
 # LLVM toolchain #
 ###############################################################################
 
-# LLVM Versions and platforms
-# https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
-LLVM_VERSIONS = {
-    "": "19.1.0",  # Linux X86
-    "darwin-aarch64": "19.1.0",  # Apple Silicon Macs
-}
-
-# INTEL/AMD64 Sysroot
-# LastModified: 2024-04-26T19:15
+# INTEL/AMD64 Sysroot. LastModified: 2024-04-26T19:15
 # https://commondatastorage.googleapis.com/chrome-linux-sysroot/
 http_archive(
-    name = "org_chromium_sysroot_linux_x64",
+    name = "sysroot_linux_x64",
     build_file = "//build/sysroot:BUILD.bazel",
     sha256 = "5df5be9357b425cdd70d92d4697d07e7d55d7a923f037c22dc80a78e85842d2c",
     urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/4f611ec025be98214164d4bf9fbe8843f58533f7/debian_bullseye_amd64_sysroot.tar.xz"],
 )
 
-# ARM 64 Sysroot
-# LastModified: 2024-04-26T18:33
+# ARM 64 Sysroot. LastModified: 2024-04-26T18:33
 # https://commondatastorage.googleapis.com/chrome-linux-sysroot/
 http_archive(
-    name = "org_chromium_sysroot_linux_aarch64",
+    name = "sysroot_linux_aarch64",
     build_file = "//build/sysroot:BUILD.bazel",
     sha256 = "d303cf3faf7804c9dd24c9b6b167d0345d41d7fe4bfb7d34add3ab342f6a236c",
     urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/906cc7c6bf47d4bd969a3221fc0602c6b3153caa/debian_bullseye_arm64_sysroot.tar.xz"],
 )
-
-# LLVM SETUP
-
-llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
-
-# Host LLVM toolchain.
+# LLVM Versions and platforms
+# https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
+llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
 llvm.toolchain(
     name = "llvm_toolchain",
-    llvm_versions = LLVM_VERSIONS,
-)
-use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")
-
-# X86 LLVM Toolchain with sysroot. Sysroot is defined in WORKSPACE.bzlmod.
-llvm.toolchain(
-    name = "llvm_toolchain_x86_with_sysroot",
-    llvm_versions = LLVM_VERSIONS,
+    llvm_version = "19.1.0", # Same LLVM version for all platforms
+    stdlib = {
+        "linux-x86_64" : "stdc++",
+        "linux-aarch64": "stdc++",
+    }
 )
 llvm.sysroot(
-    name = "llvm_toolchain_x86_with_sysroot",
-    label = "@org_chromium_sysroot_linux_x64//:sysroot",
-    targets = [
-        "linux-x86_64",
-    ],
-)
-use_repo(llvm, "llvm_toolchain_x86_with_sysroot")
-
-# ARM (aarch64) LLVM Toolchain with sysroot. Sysroot is defined in WORKSPACE.bzlmod.
-llvm.toolchain(
-    name = "llvm_toolchain_aarch64_with_sysroot",
-    llvm_versions = LLVM_VERSIONS,
+    name = "llvm_toolchain",
+    label = "@sysroot_linux_x64//:sysroot",
+    targets = ["linux-x86_64"],
 )
 llvm.sysroot(
-    name = "llvm_toolchain_aarch64_with_sysroot",
-    label = "@org_chromium_sysroot_linux_aarch64//:sysroot",
-    targets = [
-        "linux-aarch64",
-    ],
+    name = "llvm_toolchain",
+    label = "@sysroot_linux_aarch64//:sysroot",
+    targets = ["linux-aarch64"],
 )
-use_repo(llvm, "llvm_toolchain_aarch64_with_sysroot")
+use_repo(llvm, "llvm_toolchain")
 
-# Register all LLVM toolchains
-register_toolchains("@llvm_toolchain//:all")
+register_toolchains("@llvm_toolchain//:all", dev_dependency = True)
+
 
 ###############################################################################
 # Rust toolchain #
@@ -112,3 +89,6 @@ rust.toolchain(
 use_repo(rust, "rust_toolchains")
 
 register_toolchains("@rust_toolchains//:all")
+
+# Rust dependencies are vendored; see:
+# //thirdparty/BUILD.bazel
