--- a/.bazelrc
+++ b/.bazelrc
@@ -67,17 +67,17 @@ common --incompatible_merge_fixed_and_default_shell_env
 # Debug toolchain resolution
 # build --toolchain_resolution_debug='@bazel_tools//tools/cpp:toolchain_type
 
-# Required to support cross compilation from different host systems i.e Mac and Linux
-# https://bazel.build/reference/command-line-reference#flag--enable_platform_specific_config
-common --enable_platform_specific_config
+# Required for cargo_build_script support before Bazel 7
+build --incompatible_merge_fixed_and_default_shell_env
 
 # Required to resolve C/C++ toolchain.
 # https://github.com/bazel-contrib/musl-toolchain?tab=readme-ov-file#setup
 build --incompatible_enable_cc_toolchain_resolution
 
-# Build targets for different hosts
-build:macos --extra_execution_platforms=//build/platforms:darwin-aarch64
-build:linux --extra_execution_platforms=//build/platforms:linux-x86_64
+# Required to support cross compilation from different host systems i.e Mac and Linux
+# https://bazel.build/reference/command-line-reference#flag--enable_platform_specific_config
+common --enable_platform_specific_config
+
 
 ###############################################################################
 ## Custom user flags
