--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -20,9 +20,9 @@ git_override(
 )
 
 ###############################################################################
-# LLVM toolchain #
+# Small (static) LLVM toolchain
+# https://github.com/dzbarsky/static-clang
 ###############################################################################
-
 # INTEL/AMD64 Sysroot. LastModified: 2024-04-26T19:15
 # https://commondatastorage.googleapis.com/chrome-linux-sysroot/
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
@@ -41,16 +41,22 @@ http_archive(
     sha256 = "d303cf3faf7804c9dd24c9b6b167d0345d41d7fe4bfb7d34add3ab342f6a236c",
     urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/906cc7c6bf47d4bd969a3221fc0602c6b3153caa/debian_bullseye_arm64_sysroot.tar.xz"],
 )
-# LLVM Versions and platforms
-# https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
-llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
+
+llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
 llvm.toolchain(
-    name = "llvm_toolchain",
-    llvm_version = "19.1.0", # Same LLVM version for all platforms
+    llvm_version = "18.1.2",
+    sha256 = {
+        "darwin-aarch64": "a6dfd8d98f0753c96e74382f93520ead9ab4c1fa5c52676c6bdbe32cd4fbc89f",
+        "linux-x86_64"  : "6511968b1b5c4369fe5032c7a470fddc0da290cf740518a5c03c048adc5163c2",
+    },
     stdlib = {
-        "linux-x86_64" : "stdc++",
+        "linux-x86_64": "stdc++",
         "linux-aarch64": "stdc++",
-    }
+    },
+    urls = {
+        "darwin-aarch64": ["https://github.com/dzbarsky/static-clang/releases/download/v18.1.2-3/darwin_arm64.tar.xz"],
+        "linux-x86_64"  : ["https://github.com/dzbarsky/static-clang/releases/download/v18.1.2-3/linux_amd64.tar.xz"],
+    },
 )
 llvm.sysroot(
     name = "llvm_toolchain",
@@ -64,8 +70,7 @@ llvm.sysroot(
 )
 use_repo(llvm, "llvm_toolchain")
 
-register_toolchains("@llvm_toolchain//:all", dev_dependency = True)
-
+register_toolchains("@llvm_toolchain//:all")
 
 ###############################################################################
 # Rust toolchain #
