Added MUSL cross compilation setup with small LLVM host toolchain.
Signed-off-by: Marvin Hansen <marvin.hansen@gmail.com>

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -10,6 +10,7 @@ module(
 bazel_dep(name = "rules_rust", version = "0.51.0")
 bazel_dep(name = "platforms", version = "0.0.10")
 bazel_dep(name = "toolchains_llvm", version = "1.2.0", dev_dependency = True)
+bazel_dep(name = "toolchains_musl", version = "0.1.20", dev_dependency = True)
 
 # https://github.com/brainhivenl/libpq
 bazel_dep(name = "libpq", version = "0.0.1")
@@ -23,49 +24,30 @@ git_override(
 # LLVM toolchain #
 ###############################################################################
 
-# INTEL/AMD64 Sysroot. LastModified: 2024-04-26T19:15
-# https://commondatastorage.googleapis.com/chrome-linux-sysroot/
-http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
-http_archive(
-    name = "sysroot_linux_x64",
-    build_file = "//build/sysroot:BUILD.bazel",
-    sha256 = "5df5be9357b425cdd70d92d4697d07e7d55d7a923f037c22dc80a78e85842d2c",
-    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/4f611ec025be98214164d4bf9fbe8843f58533f7/debian_bullseye_amd64_sysroot.tar.xz"],
-)
-
-# ARM 64 Sysroot. LastModified: 2024-04-26T18:33
-# https://commondatastorage.googleapis.com/chrome-linux-sysroot/
-http_archive(
-    name = "sysroot_linux_aarch64",
-    build_file = "//build/sysroot:BUILD.bazel",
-    sha256 = "d303cf3faf7804c9dd24c9b6b167d0345d41d7fe4bfb7d34add3ab342f6a236c",
-    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/906cc7c6bf47d4bd969a3221fc0602c6b3153caa/debian_bullseye_arm64_sysroot.tar.xz"],
-)
-# LLVM Versions and platforms
-# https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
-llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
+# Here we set only a host toolchain for Apple Silicon and Linux on X86/64.
+llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
 llvm.toolchain(
-    name = "llvm_toolchain",
-    llvm_version = "19.1.0", # Same LLVM version for all platforms
+    llvm_version = "18.1.2",
+    sha256 = {
+        "darwin-aarch64": "a6dfd8d98f0753c96e74382f93520ead9ab4c1fa5c52676c6bdbe32cd4fbc89f",
+        "linux-x86_64"  : "6511968b1b5c4369fe5032c7a470fddc0da290cf740518a5c03c048adc5163c2",
+    },
     stdlib = {
-        "linux-x86_64" : "stdc++",
+        "linux-x86_64": "stdc++",
         "linux-aarch64": "stdc++",
-    }
+    },
+    urls = {
+        "darwin-aarch64": ["https://github.com/dzbarsky/static-clang/releases/download/v18.1.2-3/darwin_arm64.tar.xz"],
+        "linux-x86_64"  : ["https://github.com/dzbarsky/static-clang/releases/download/v18.1.2-3/linux_amd64.tar.xz"],
+    },
 )
-llvm.sysroot(
-    name = "llvm_toolchain",
-    label = "@sysroot_linux_x64//:sysroot",
-    targets = ["linux-x86_64"],
-)
-llvm.sysroot(
-    name = "llvm_toolchain",
-    label = "@sysroot_linux_aarch64//:sysroot",
-    targets = ["linux-aarch64"],
-)
-use_repo(llvm, "llvm_toolchain")
 
-register_toolchains("@llvm_toolchain//:all", dev_dependency = True)
+# No LLVM sysroots are required since we use MUSL to cross compile.
+# Notice, the Rust target triplets have been changed to MUSL targets.
 
+use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")
+
+register_toolchains("@llvm_toolchain//:all")
 
 ###############################################################################
 # Rust toolchain #
@@ -79,8 +61,8 @@ rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
 rust.toolchain(
     edition = RUST_EDITION,
     extra_target_triples = [
-        "aarch64-unknown-linux-gnu",
-        "x86_64-unknown-linux-gnu",
+        "x86_64-unknown-linux-musl",
+        "aarch64-unknown-linux-musl",
     ],
     versions = [RUST_VERSION],
 )
