--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -23,6 +23,7 @@ git_override(
 # Small (static) LLVM toolchain
 # https://github.com/dzbarsky/static-clang
 ###############################################################################
+
 # INTEL/AMD64 Sysroot. LastModified: 2024-04-26T19:15
 # https://commondatastorage.googleapis.com/chrome-linux-sysroot/
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
@@ -42,20 +43,24 @@ http_archive(
     urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/906cc7c6bf47d4bd969a3221fc0602c6b3153caa/debian_bullseye_arm64_sysroot.tar.xz"],
 )
 
+# v18.1.2-4
+# https://github.com/dzbarsky/static-clang/releases
+
+# Here we set only a host toolchain for Apple Silicon and Linux on X86/64.
 llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
 llvm.toolchain(
     llvm_version = "18.1.2",
     sha256 = {
-        "darwin-aarch64": "a6dfd8d98f0753c96e74382f93520ead9ab4c1fa5c52676c6bdbe32cd4fbc89f",
-        "linux-x86_64"  : "6511968b1b5c4369fe5032c7a470fddc0da290cf740518a5c03c048adc5163c2",
+        "darwin-aarch64": "5b3f307a6efd1c4d9d8e5b0566f9c06a07d460049307320c400f1f632de3d484",
+        "linux-x86_64"  : "29ac190b56060aec2d699f226982275f3d1fd660cc93cf167b4c58e9a628c669",
     },
     stdlib = {
         "linux-x86_64": "stdc++",
         "linux-aarch64": "stdc++",
     },
     urls = {
-        "darwin-aarch64": ["https://github.com/dzbarsky/static-clang/releases/download/v18.1.2-3/darwin_arm64.tar.xz"],
-        "linux-x86_64"  : ["https://github.com/dzbarsky/static-clang/releases/download/v18.1.2-3/linux_amd64.tar.xz"],
+        "darwin-aarch64": ["https://github.com/dzbarsky/static-clang/releases/download/v18.1.2-4/darwin_arm64.tar.xz"],
+        "linux-x86_64"  : ["https://github.com/dzbarsky/static-clang/releases/download/v18.1.2-4/linux_amd64.tar.xz"],
     },
 )
 llvm.sysroot(
