Added  the small LLVM toolchain courtesy of Materialize, Inc.
Signed-off-by: Marvin Hansen <marvin.hansen@gmail.com>

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -49,18 +49,18 @@ http_archive(
 # Here we set only a host toolchain for Apple Silicon and Linux on X86/64.
 llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
 llvm.toolchain(
-    llvm_version = "18.1.2",
+    llvm_version = "18.1.8",
     sha256 = {
-        "darwin-aarch64": "5b3f307a6efd1c4d9d8e5b0566f9c06a07d460049307320c400f1f632de3d484",
-        "linux-x86_64"  : "29ac190b56060aec2d699f226982275f3d1fd660cc93cf167b4c58e9a628c669",
+        "darwin-aarch64": "",
+        "linux-x86_64"  : "",
     },
     stdlib = {
         "linux-x86_64": "stdc++",
         "linux-aarch64": "stdc++",
     },
     urls = {
-        "darwin-aarch64": ["https://github.com/dzbarsky/static-clang/releases/download/v18.1.2-4/darwin_arm64.tar.xz"],
-        "linux-x86_64"  : ["https://github.com/dzbarsky/static-clang/releases/download/v18.1.2-4/linux_amd64.tar.xz"],
+        "darwin-aarch64": ["https://github.com/MaterializeInc/toolchains/releases/download/clang-18.1.8-4/darwin_aarch64.tar.zst"],
+        "linux-x86_64"  : ["https://github.com/MaterializeInc/toolchains/releases/download/clang-18.1.8-4/darwin_x86_64.tar.zst"],
     },
 )
 llvm.sysroot(
