--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -7,7 +7,10 @@ module(
 # B A Z E L   D E P E N D E N C I E S # https://registry.bazel.build/
 ###############################################################################
 
-bazel_dep(name = "rules_rust", version = "0.51.0")
+bazel_dep(name = "rules_apko", version = "1.4.0")
+bazel_dep(name = "rules_rust", version = "0.52.2")
+bazel_dep(name = "rules_pkg", version = "1.0.1")
+bazel_dep(name = "rules_oci", version = "2.0.1")
 bazel_dep(name = "platforms", version = "0.0.10")
 bazel_dep(name = "toolchains_llvm", version = "1.2.0", dev_dependency = True)
 
@@ -72,7 +75,7 @@ register_toolchains("@llvm_toolchain//:all", dev_dependency = True)
 ###############################################################################
 RUST_EDITION = "2021"  # NOTE: 2024 will be released with Rust 1.86.0
 
-RUST_VERSION = "1.81.0"
+RUST_VERSION = "1.82.0"
 
 # https://github.com/bazelbuild/rules_rust/releases
 rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
@@ -90,3 +93,16 @@ register_toolchains("@rust_toolchains//:all")
 
 # Rust dependencies are vendored; see:
 # //thirdparty/BUILD.bazel
+
+###############################################################################
+# Apko toolchain for secure OCI base images
+# https://github.com/chainguard-dev/rules_apko
+###############################################################################
+# Translate apko.lock.json to @base_image//:contents
+# https://edu.chainguard.dev/open-source/build-tools/apko/bazel-rules/
+apk = use_extension("@rules_apko//apko:extensions.bzl", "apko")
+apk.translate_lock(
+    name = "base_image",
+    lock = "//images/base_image:apko.lock.json",
+)
+use_repo(apk, "base_image")
