--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -6,12 +6,13 @@ module(
 ###############################################################################
 # B A Z E L   D E P E N D E N C I E S # https://registry.bazel.build/
 ###############################################################################
-bazel_dep(name = "aspect_bazel_lib", version = "2.9.2")
+bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
+bazel_dep(name = "bazel_skylib", version = "1.7.1")
+bazel_dep(name = "platforms", version = "0.0.10")
 bazel_dep(name = "rules_apko", version = "1.4.0")
-bazel_dep(name = "rules_rust", version = "0.52.2")
+bazel_dep(name = "rules_rust", version = "0.54.1")
 bazel_dep(name = "rules_pkg", version = "1.0.1")
 bazel_dep(name = "rules_oci", version = "2.0.1")
-bazel_dep(name = "platforms", version = "0.0.10")
 bazel_dep(name = "toolchains_llvm", version = "1.2.0", dev_dependency = True)
 
 # https://github.com/brainhivenl/libpq
@@ -75,7 +76,7 @@ register_toolchains("@llvm_toolchain//:all", dev_dependency = True)
 ###############################################################################
 RUST_EDITION = "2021"  # NOTE: 2024 will be released with Rust 1.86.0
 
-RUST_VERSION = "1.82.0"
+RUST_VERSION = "1.83.0"
 
 # https://github.com/bazelbuild/rules_rust/releases
 rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
@@ -91,7 +92,7 @@ use_repo(rust, "rust_toolchains")
 
 register_toolchains("@rust_toolchains//:all")
 
-# Rust dependencies are vendored; see:
+# Rust dependencies vendored in:
 # //thirdparty/BUILD.bazel
 
 ###############################################################################
